<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BLE Term</string>
    <string name="action_settings">Settings</string>
    <string name="open">Turn On</string>
    <string name="off">Turn Off</string>
    <string name="blue">Search</string>
    <string name="device_scan">Scan</string>
    <string name="device_scan_stop">Stop</string>
    <color name="textb">#000000</color>
    
    <string name="ble_not_supported">BLE is not supported</string>
    <string name="label_data">Data:</string>
    <string name="label_device_address">Device address:</string>
    <string name="label_state">State:</string>
    <string name="label_rssi">RSSI:</string>
    <string name="no_data">No data</string>
    <string name="connected">CONN</string>
    <string name="disconnected">DISC</string>
    <string name="title_devices">BLE Device Scan</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>
    <string name="btn_label_send">Send</string>
    <string name="cb_label_nl">New Line</string>
    <string name="cb_label_hex">Hex</string>

    <string name="unknown_device">Unknown device</string>
    <string name="unknown_characteristic">Unknown characteristic</string>
    <string name="unknown_service">Unknown service</string>

    <!-- Menu items -->
    <string name="menu_connect">Connect</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="menu_back">Back</string>
    <string name="menu_dump">Dump BT Info</string>
    
</resources>
