<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto" >

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/menu_back"/>
    <item
        android:id="@+id/action_cont"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/menu_connect"/>
    <item
        android:id="@+id/action_close"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/menu_disconnect"/>
    <item
        android:id="@+id/action_dump"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/menu_dump"/>

</menu>
